# w4da

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  package.json  tailwind.config.js  vite.config.ts
deploy/nginx/: w4da.com.conf
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
server/src/: db.rs  main.rs  protocol.rs  state.rs  ws.rs
src/: App.tsx  index.css  vite-env.d.ts
src/assets/: cyber_katana.glb  shotgun.glb  urcementclean_pbr_material.glb
src/assets/Fantasy Fire Elemental/: Fantasy Fire Elemental.gltf  Fantasy Fire Elemental.url
src/assets/skybox/: skybox.gltf  skybox.url
src/components/: Landing.tsx  Navbar.tsx  Phrasebook.tsx
src/components/game/: GameCanvas.tsx  HUD.tsx  HeroSelect.tsx  SpeechBubbles.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx
src/data/: heroes.ts
src/game/: bullets.ts  enemies.ts  factory.ts  game.ts  input.ts  meteor.ts  player.ts  sfx.ts  summon.ts  types.ts  womanZombie.ts  zombies.ts
src/net/: multiplayer.ts
