[package]
name = "w4da-worker"
version = "0.1.0"
edition = "2021"
description = "W4DA realtime multiplayer worker — WebSocket game rooms (up to 10 players) + score API."

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
futures = "0.3"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
sqlx = { version = "0.8", default-features = false, features = [
  "mysql",
  "runtime-tokio-rustls",
] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
